# esme-base-app

./: .env.exemple  01_base_llm_call.py  02_base_call_plus_log.py  03_multi_call.py  04_dataset_experiment.py  05_llm_as_a_judge.py  pyproject.toml
